nohup.out
Traceback (most recent call last):
  File "main.py", line 25, in <module>
    from home import home
  File "/data/pro/python/cgserver/home/__init__.py", line 15, in <module>
    from . import MP
  File "/data/pro/python/cgserver/home/MP.py", line 1
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax
